# Feline

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
assets/: icon.icns
src/: app.rs  config.rs  credentials.rs  logging.rs  main.rs  state.rs  util.rs
src/download/: dedup.rs  manager.rs  mod.rs  worker.rs
src/e621/: client.rs  mod.rs  rate_limit.rs  types.rs
ui/: app.slint  log.slint  queue.slint  settings.slint  sidebar.slint  theme.slint  types.slint  widgets.slint
