[package]
name = "feline"
version = "0.3.0"
edition = "2024"
rust-version = "1.95.0"
license = "MIT"

[dependencies]
slint = "1.16.1"

tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-util = { version = "0.7.18", features = ["io"] }
futures = "0.3.32"
parking_lot = "0.12.5"

reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "query", "rustls", "gzip", "brotli", "http2"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

md-5 = "0.11.0"
hex = "0.4.3"

governor = "0.10.4"
backon = { version = "1.6.0", features = ["tokio-sleep"] }

walkdir = "2.5.0"
rfd = "0.17.2"

anyhow = "1.0.102"
thiserror = "2.0.18"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.5"

time = { version = "0.3.47", features = ["serde", "formatting", "macros"] }

[build-dependencies]
slint-build = "1.16.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.5.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
